<?xml version="1.0" encoding="utf-8"?>
<agency.tango.materialintroscreen.parallax.ParallaxLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slide_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:background="@android:color/transparent"
    android:clipToPadding="false"
    android:fitsSystemWindows="false"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="164dp">


    <TextView
        android:text="@string/usage_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_parallaxFactor="0.5" />

    <TextView
        android:text="@string/usage_permission_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_parallaxFactor="0.2" />
    <Button
        android:text="@string/setting_now"
        android:id="@+id/button_permission_slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_parallaxFactor="0.4"/>

</agency.tango.materialintroscreen.parallax.ParallaxLinearLayout>
